--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="E.B.'s playground'" />
+  <meta name="description" content="E.B.'s playground" />
   <link
     href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Libre+Barcode+128+Text&family=Major+Mono+Display&family=Monofett&family=Plaster&family=Playfair+Display&family=Reenie+Beanie&family=Zilla+Slab+Highlight&display=swap"
     rel="stylesheet">
